<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/navColor">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/fav"
        android:title="@string/title_favoritos" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/exchange"
        android:title="@string/title_exchange" />
    <item
        android:id="@+id/navigation_noticias"
        android:icon="@drawable/news"
        android:title="@string/title_noticias" />

    <item
        android:id="@+id/evento"
        android:icon="@drawable/event"
        android:title="@string/title_evento" />


</menu>
